fix margin alignment

--- a/css/index.css
+++ b/css/index.css
@@ -75,12 +75,12 @@ h1{
 
 h2{
 	font-size:30px;
-	padding:15px;
+	padding:3%;
 }
 
 h3{
 	font-size:20px;
-	padding:10px
+	padding:3%
 }
 .navbar{
     display:flex;
@@ -223,6 +223,9 @@ li{
         display:flex;
         flex-direction:column-reverse;
     }
+    h1{
+        font-size:40px;
+    }
     nav{
         width:100%;
     }
@@ -238,23 +241,45 @@ li{
 
 }
 @media (max-width: 500px){
+    body{
+        font-size:14px;
+    }
+    .logo{
+        width:90%;
+        padding:10%;
+        padding-left:20%
+    }
+    h1{
+        font-size:40px;
+    }
+    h2{
+         font-size:20px;
+    }
+    .startButton{
+        width:40vw;
+    }
     nav{
         flex-direction:column;
         align-items:center;
     }
     .navbarlink{
-        border-top: 1px solid black;
+        border-top: 1px solid grey;
         margin:0;
         padding-left:40%;
         padding-right:60%
     }
-    .navbarlink:nth-last-child(){
-        border-bottom: 1px solid black;
+    .navbarlink:last-of-type{
+        border-bottom:1px solid grey
     }
     .subsection1 , #subsection3{
         flex-direction:column;
     }
     .sectionDivs, .sectionDivs2{
         width:100%;
+    }
+    #footerDiv{
+        width:100%;
+        padding:5px;
+        padding-bottom:10px;
     }
 }
